# LibreScribe

./: .Makefile.old  .gitignore  LibreScribe.cbp  Makefile.am  Makefile.broken  README  aclocal.m4  config.h.in  configure.ac
src/: .Makefile.old  AboutDialog.cc  AboutDialog.cpp~  AboutDialog.h  AboutDialog.h~  BackgroundMonitor.cc  DeviceInfo.cc  DeviceInfo.h  GUIFrame.cc  GUIFrame.h  GUIFrame.h~  LibreScribe.cc  LibreScribe.h~  Makefile.am  Makefile.am~  Smartpen.cc  Smartpen.cpp  Smartpen.cpp~  Smartpen.h  Smartpen.h~  wx_pch.h~
src/.deps/: AboutDialog.Po  BackgroundMonitor.Po  DeviceInfo.Po
